--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
             <h1>NUFE Public Economics Reading Group</h1>
             <p>Semester: Spring 2025</p>
             <p>本读书会共同研读Top 5+JPubE上公共经济学方向上的论文。</p>
-            <p>时间暂定为每周三12：10~13：10pm。地点：德经楼公共财政中心。</p>
+            <p>时间暂定为每周三12：10~13：10pm（从第三周开始）。地点：德经楼公共财政中心。</p>
             <p>研读计划如下：</p>
             <table border="4">
                 <thead>
                     <tr>
-                        <th style="width: 10%;">周</th>
+                        <th style="width: 10%;">次序</th>
                         <th style="width: 50%;">论文</th>
                         <th style="width: 20%;">报告人</th>
                         <th style="width: 20%;">幻灯片</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>第3周</td></td><td>Notching R&D investment with corporate income tax cuts in China</td><td>王临风</td><td>TBD</td></tr>
-                    <tr><td>第4周</td><td>The largest insurance program in history:Saving one million lives per year in China</td><td>章文坤</td><td>TBD</td></tr>
-                    <tr><td>第5周</td><td>The Global Distribution of College Graduate Quality</td><td>李雪莹</td><td>TBD</td></tr>
-                    <tr><td>第6周</td><td>Tax competition effects of a minimum tax rate: Empirical evidence from German municipalities</td><td>牛力</td><td>TBD</td></tr>
-                    <tr><td>第7周</td><td>The lifetime costs of bad health</td><td>叶兵</td><td>TBD</td></tr>
-                    <tr><td>第8周</td><td>TBD</td><td>耿峰</td><td>TBD</td></tr>
-                    <tr><td>第9周</td><td>TBD</td><td>姜晓妮</td><td>TBD</td></tr>
-                    <tr><td>第10周</td><td>TBD</td><td>刘家成</td><td>TBD</td></tr>
-                    <tr><td>第11周</td><td>TBD</td><td>倪婷婷</td><td>TBD</td></tr>
-                    <tr><td>第12周</td><td>TBD</td><td>王倩倩</td><td>TBD</td></tr>
-                    <tr><td>第13周</td><td>TBD</td><td>严文宏</td><td>TBD</td></tr>
-                    <tr><td>第14周</td><td>TBD</td><td>张海峰</td><td>TBD</td></tr>
+                    <tr><td>1</td></td><td>Notching R&D investment with corporate income tax cuts in China</td><td>王临风</td><td>TBD</td></tr>
+                    <tr><td>2</td><td>The largest insurance program in history:Saving one million lives per year in China</td><td>章文坤</td><td>TBD</td></tr>
+                    <tr><td>3</td><td>The Global Distribution of College Graduate Quality</td><td>李雪莹</td><td>TBD</td></tr>
+                    <tr><td>4</td><td>Tax competition effects of a minimum tax rate: Empirical evidence from German municipalities</td><td>牛力</td><td>TBD</td></tr>
+                    <tr><td>5</td><td>The lifetime costs of bad health</td><td>叶兵</td><td>TBD</td></tr>
+                    <tr><td>6</td><td>TBD</td><td>耿峰</td><td>TBD</td></tr>
+                    <tr><td>7</td><td>TBD</td><td>姜晓妮</td><td>TBD</td></tr>
+                    <tr><td>8</td><td>TBD</td><td>刘家成</td><td>TBD</td></tr>
+                    <tr><td>9</td><td>TBD</td><td>倪婷婷</td><td>TBD</td></tr>
+                    <tr><td>10</td><td>TBD</td><td>王倩倩</td><td>TBD</td></tr>
+                    <tr><td>11</td><td>TBD</td><td>严文宏</td><td>TBD</td></tr>
+                    <tr><td>12</td><td>TBD</td><td>张海峰</td><td>TBD</td></tr>
                 </tbody>
             </table>
         </div>
